# business-case-lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  copilot-instructions.md  pyproject.toml
docs/: AI-Programme-Business-Case-Requirement.md  full-conversion.md  repo-structure.md
eval/: README.md  scorecard.json
prompts/: interviewer.md  interviewer_prompt.md  interviewer_prompt.txt  renderer.md  renderer_prompt.md  renderer_prompt.txt
schema/: business_case.schema.json
spec/: README.md  business_case_template.md
src/bcaselab/: cli.py
tests/synthetic/case_001/: gold.json  gold.md
tests/unit/: test_cli.py
